--- a/CSS/formex.html
+++ b/CSS/formex.html
@@ -1,6 +1,6 @@
 <form>  
     <label>Enter User name</label><br>  
-    <input type="text" name="firstname" size = 100 required><br>  
+    <input type="text" name="firstname" size = "100" required><br>  
     <label>disable</label>
     <input type="text" name="lastname" disabled><br>
     <label>Enter Password</label><br>  
